CICO-25336 1. Added the feature in ta/cc autocomplete to append in the passing dom node 2. Fixed the issue of auto complete is not showing full text

--- a/stylesheets/less/app/05-C_plugins.less
+++ b/stylesheets/less/app/05-C_plugins.less
@@ -229,7 +229,6 @@
 
         &.find-cards {
             width: auto;
-            max-width: 420px !important;
 
             li {
                 a {
@@ -323,7 +322,6 @@
 
         &.find-cards {
             width: auto;
-            max-width: 420px !important;
 
             li {
                 a {
